1. Collection API Улучшения[#194582]