@@ -14,12 +14,11 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<Task> tasks = Arrays.asList(
-                new Task("1", "First desc"),
-                new Task("2", "Second desc"),
-                new Task("1", "First desc")
-        );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
-        assertThat(FullSearch.extractNumber(tasks), is(expected));
+        assertThat(FullSearch.extractNumber(
+                List.of(new Task("1", "First desc"),
+                        new Task("2", "Second desc"),
+                        new Task("1", "First desc"))),
+                is(
+                        Set.of("1", "2")));
     }
 }
